--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "date-fns": "^2.25.0",
     "next": "12.0.3",
+    "next-pwa": "^5.4.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-toastify": "^8.1.0",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
